# move_shmem_pages

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README  autogen.sh  configure.ac
src/: create_shmem.c  create_shmem.h  move_shmem_pages.c  move_shmem_pages.h  pid_numainfo.c  pid_numainfo.h  shmem_numainfo.c  shmem_numainfo.h  unlink_shmem.c  unlink_shmem.h
