
dnl process this file with autoconf to produce the configure script

AC_PREREQ([2.68])
AC_INIT([move_shmem_pages], [0.1], [andreas.grapentin@hpi.de])
AC_CONFIG_SRCDIR([src/move_shmem_pages.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([scripts])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC

AC_CONFIG_FILES([
  Makefile])

AC_OUTPUT
